<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BMI Calculator</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="result">Result</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="BMI_Calculator">BMI Calculator</string>

    <string name="sign_in_with_your_google_account">sign in with your google account</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="logout">Logout</string>

    <string name="go_to_calculator">Go to Calculator</string>
    <string name="calculator">calculator</string>

</resources>
