<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.caloriecalculator.MainActivity"
    tools:ignore="ExtraText">
    //the purpose of the calculator is to calculate the body mass index simply by entering your
    height and weight by that you can see weather you are underweight, normal or overweight


    <TextView
        android:id="@+id/textView"
        android:layout_width="136dp"
        android:layout_height="41dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="258dp"
        android:gravity="center"
        android:text="@string/BMI_Calculator"
        android:textColor="#0C041C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="202dp"
        android:layout_height="45dp"
        android:hint="@string/enter_your_weight"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/enter_your_height"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:layout_marginBottom="236dp"

        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/tv_result"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="260dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="233dp"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="400dp" />


</androidx.constraintlayout.widget.ConstraintLayout>